# python-google-cloud-study

./: .gitignore  Makefile  README.md
examples/pubsub/: Dockerfile  pyproject.toml
examples/pubsub/pubsub/: compact.py  consume.py  main.py  producer.py  redrive.py  store.py
infra/terraform/: basics.tf  main.tf  permissions.tf  pubsubs.tf  tables.tf
infra/terraform/modules/pubsub/: main.tf
infra/terraform/modules/table/: main.tf
